--- a/index.html
+++ b/index.html
@@ -1,43 +1,109 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-<title>Kaka</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kaka Ramadhan</title>
+
 <style>
 body{
-background:#0f172a;
-font-family:Arial;
-color:white;
-text-align:center;
-padding:40px;
+    margin:0;
+    font-family: Arial, Helvetica, sans-serif;
+    background:#0f0f0f;
+    color:white;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
 }
-.card{
-background:#1e293b;
-padding:30px;
-border-radius:20px;
-width:320px;
-margin:auto;
+
+.container{
+    text-align:center;
+    background:#1a1a1a;
+    padding:30px;
+    border-radius:20px;
+    width:320px;
+    box-shadow:0 0 25px rgba(0,0,0,0.6);
 }
-a{
-display:block;
-background:#38bdf8;
-margin:10px;
-padding:12px;
-border-radius:10px;
-text-decoration:none;
-color:black;
-font-weight:bold;
+
+img{
+    width:130px;
+    height:130px;
+    border-radius:50%;
+    object-fit:cover;
+    border:3px solid #fff;
+    margin-bottom:15px;
+}
+
+h1{
+    margin:5px 0;
+}
+
+p{
+    color:#aaa;
+    font-size:14px;
+}
+
+.skill-box{
+    background:#111;
+    padding:12px;
+    border-radius:12px;
+    margin-top:15px;
+}
+
+.skill-title{
+    font-size:13px;
+    color:#888;
+}
+
+.skill{
+    font-weight:bold;
+    color:#00ffcc;
+}
+
+.link{
+    display:block;
+    background:#262626;
+    padding:12px;
+    border-radius:12px;
+    margin-top:12px;
+    text-decoration:none;
+    color:white;
+    transition:0.3s;
+}
+
+.link:hover{
+    background:#333;
 }
 </style>
 </head>
 
 <body>
-<div class="card">
-<h2>Muhammad Kaka Ramadhan</h2>
-<p>Website pribadi</p>
 
-<a href="#">Instagram</a>
-<a href="#">TikTok</a>
-<a href="#">WhatsApp</a>
+<div class="container">
+
+    <!-- FOTO -->
+    <img src="foto.jpg">
+
+    <h1>Kaka Ramadhan</h1>
+    <p>Beranilah mengambil resiko, karena tidak ada yang bisa menggantikan pengalaman</p>
+
+    <!-- SKILL -->
+    <div class="skill-box">
+        <div class="skill-title">Skill</div>
+        <div class="skill">Computer Networking Basic</div>
+    </div>
+
+    <div class="skill-box">
+        <div class="skill-title">Focus Area</div>
+        <div class="skill">Networking</div>
+    </div>
+
+    <!-- SOSMED -->
+    <a class="link" href="https://instagram.com/kaa_kemren">Instagram</a>
+    <a class="link" href="https://youtube.com/@MUHAMMADKAKARAMADHAN">YouTube</a>
+
 </div>
+
 </body>
 </html>
