--- a/index.html
+++ b/index.html
@@ -1,107 +1,63 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kaka Ramadhan</title>
 
 <style>
 body{
-    margin:0;
-    font-family: Arial, Helvetica, sans-serif;
-    background:#0f0f0f;
-    color:white;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
+background:#0f0f0f;
+color:white;
+font-family:Arial;
+text-align:center;
+padding-top:60px;
 }
 
-.container{
-    text-align:center;
-    background:#1a1a1a;
-    padding:30px;
-    border-radius:20px;
-    width:320px;
-    box-shadow:0 0 25px rgba(0,0,0,0.6);
+.card{
+background:#1a1a1a;
+width:300px;
+margin:auto;
+padding:25px;
+border-radius:18px;
+box-shadow:0 0 20px rgba(0,0,0,0.5);
 }
 
 img{
-    width:130px;
-    height:130px;
-    border-radius:50%;
-    object-fit:cover;
-    border:3px solid #fff;
-    margin-bottom:15px;
-}
-
-h1{
-    margin:5px 0;
-}
-
-p{
-    color:#aaa;
-    font-size:14px;
-}
-
-.skill-box{
-    background:#111;
-    padding:12px;
-    border-radius:12px;
-    margin-top:15px;
-}
-
-.skill-title{
-    font-size:13px;
-    color:#888;
-}
-
-.skill{
-    font-weight:bold;
-    color:#00ffcc;
+width:140px;
+border-radius:50%;
+margin-bottom:15px;
 }
 
 .link{
-    display:block;
-    background:#262626;
-    padding:12px;
-    border-radius:12px;
-    margin-top:12px;
-    text-decoration:none;
-    color:white;
-    transition:0.3s;
+display:block;
+background:#262626;
+margin:10px 0;
+padding:12px;
+border-radius:10px;
+color:white;
+text-decoration:none;
+font-weight:bold;
 }
 
 .link:hover{
-    background:#333;
+background:#333;
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<div class="card">
 
-    <!-- FOTO -->
-    <img src="foto.jpg">
+<img src="PICKAKA.jpeg">
 
-    <h1>Kaka Ramadhan</h1>
-    <p>Beranilah mengambil resiko, karena tidak ada yang bisa menggantikan pengalaman</p>
+<h2>Muhammad Kaka Ramadhan</h2>
+<p>Fokus belajar. Konsisten tiap hari.</p>
 
-    <!-- SKILL -->
-    <div class="skill-box">
-        <div class="skill-title">Skill</div>
-        <div class="skill">Computer Networking Basic</div>
-    </div>
+<p><b>Skill:</b> Computer Networking Basic</p>
+<p><b>Focus:</b> Networking</p>
 
-    <div class="skill-box">
-        <div class="skill-title">Focus Area</div>
-        <div class="skill">Networking</div>
-    </div>
-
-    <!-- SOSMED -->
-    <a class="link" href="https://instagram.com/kaa_kemren">Instagram</a>
-    <a class="link" href="https://youtube.com/@MUHAMMADKAKARAMADHAN">YouTube</a>
+<a class="link" href="https://instagram.com/kaa_kemren">Instagram</a>
+<a class="link" href="https://youtube.com/@MUHAMMADKAKARAMADHAN">YouTube</a>
 
 </div>
 
