--- a/index.html
+++ b/index.html
@@ -1,135 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kaka Ramadhan</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 
 <style>
 body{
-    background:linear-gradient(180deg,#000,#0a0a0a);
+    margin:0;
+    font-family: Arial, Helvetica, sans-serif;
+    background:#0d0d0d;
     color:white;
-    font-family:'Poppins',sans-serif;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
+    text-align:center;
 }
 
-.card{
-    width:380px;
-    padding:30px;
-    border-radius:20px;
-    background:rgba(255,255,255,0.05);
-    backdrop-filter:blur(10px);
-    box-shadow:0 0 40px rgba(0,255,255,0.15);
-    animation:fade 1s ease;
+.container{
+    margin-top:80px;
 }
 
-@keyframes fade{
-from{opacity:0; transform:translateY(20px);}
-to{opacity:1;}
+h1{
+    font-size:32px;
+    margin-bottom:5px;
 }
 
-.photo{
-    width:95px;
-    height:95px;
-    border-radius:50%;
-    object-fit:cover;
-    border:2px solid #00ffff;
-    box-shadow:0 0 20px #00ffff;
-}
-
-.name{
-    font-size:22px;
-    font-weight:600;
-    margin-top:10px;
-}
-
-.bio{
-    opacity:0.8;
-    margin-top:5px;
-}
-
-a{
-    color:#4fd1ff;
-    text-decoration:none;
+p{
+    color:#bfbfbf;
 }
 
 .link{
-    margin-top:15px;
-}
-
-.music{
-    margin-top:20px;
-    opacity:0.9;
-}
-
-.skill{
-    margin-top:20px;
-    padding:12px;
-    border-radius:12px;
-    background:rgba(0,255,255,0.08);
-}
-
-.skill-title{
-    font-weight:600;
-    color:#00ffff;
-}
-
-.social{
-    margin-top:20px;
-}
-
-.btn{
     display:block;
-    padding:10px;
-    margin-top:8px;
-    border-radius:10px;
-    background:rgba(255,255,255,0.05);
-    transition:0.3s;
+    width:80%;
+    max-width:350px;
+    margin:12px auto;
+    padding:14px;
+    border-radius:12px;
+    text-decoration:none;
+    font-weight:bold;
+    background:#1f1f1f;
+    color:white;
+    transition:0.2s;
 }
 
-.btn:hover{
-    background:#00ffff;
-    color:black;
+.link:hover{
+    background:#333;
     transform:scale(1.05);
+}
+
+.skill-box{
+    margin-top:25px;
+    font-size:14px;
+    color:#aaa;
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
+<div class="container">
 
-<center>
-<img src="PIC_KAKA.jpeg" class="photo">
-<div class="name">Muhammad Kaka Ramadhan</div>
-<div class="bio">Beranilah mengambil resiko, karena tak ada yang bisa menggantikan pengalaman.</div>
-</center>
+<h1>MUHAMMAD KAKA RAMADHAN</h1>
+<p>Beranilah mengambil resiko, karena tak ada yang bisa menggantikan pengalaman.</p>
 
-<div class="link">
-🔗 
-<a href="https://kakasite.github.io/MuhammadKakaRamadhan/">
-kakasite.github.io/MuhammadKakaRamadhan/
+<a class="link" href="https://kakasite.github.io/MuhammadKakaRamadhan/">
+🌐 Website Portfolio
 </a>
-</div>
 
-<div class="music">
-🎵 It's Only Me • Kaleb J
-</div>
+<a class="link" href="https://instagram.com/kaa_kemren" target="_blank">
+📸 Instagram
+</a>
 
-<div class="skill">
-<div class="skill-title">Skill</div>
-Computer Networking Basic  
-<br>
-Focus Area: Networking
-</div>
+<a class="link" href="https://youtube.com/@MUHAMMADKAKARAMADHAN" target="_blank">
+▶ YouTube
+</a>
 
-<div class="social">
-<a class="btn" href="https://instagram.com/kaa_kemren">Instagram</a>
-<a class="btn" href="#">YouTube: MUHAMMADKAKARAMADHAN</a>
+<div class="skill-box">
+<p><b>Skill:</b> Computer Networking Basic</p>
+<p><b>Focus Area:</b> Networking</p>
 </div>
 
 </div>
