--- a/index.html
+++ b/index.html
@@ -1,83 +1,140 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kaka Ramadhan</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
 <style>
 body{
     margin:0;
-    font-family: Arial, Helvetica, sans-serif;
-    background:#0d0d0d;
-    color:white;
+    font-family:'Poppins',sans-serif;
+    background:#f3f4f8;
+    color:#333;
+}
+
+.header{
+    background:linear-gradient(180deg,#e9ecf5,#f3f4f8);
     text-align:center;
+    padding:40px 20px;
 }
 
-.container{
-    margin-top:80px;
+.photo{
+    width:110px;
+    height:110px;
+    border-radius:50%;
+    object-fit:cover;
+    border:5px solid #d7dcef;
 }
 
-h1{
-    font-size:32px;
-    margin-bottom:5px;
+.name{
+    font-size:28px;
+    font-weight:700;
+    margin-top:15px;
 }
 
-p{
-    color:#bfbfbf;
+.sub{
+    color:#4a6fa5;
+    margin-top:5px;
 }
 
-.link{
-    display:block;
-    width:80%;
-    max-width:350px;
-    margin:12px auto;
-    padding:14px;
-    border-radius:12px;
-    text-decoration:none;
-    font-weight:bold;
-    background:#1f1f1f;
-    color:white;
-    transition:0.2s;
+.tag{
+    background:#fff;
+    padding:8px 14px;
+    border-radius:20px;
+    display:inline-block;
+    margin:6px;
+    font-size:14px;
+    box-shadow:0 4px 10px rgba(0,0,0,0.08);
 }
 
-.link:hover{
-    background:#333;
-    transform:scale(1.05);
+.section{
+    padding:30px 20px;
+    max-width:500px;
+    margin:auto;
+}
+
+.title{
+    font-size:22px;
+    font-weight:700;
+    color:#4a6fa5;
+    margin-bottom:15px;
+}
+
+.card{
+    background:white;
+    padding:20px;
+    border-radius:16px;
+    box-shadow:0 4px 15px rgba(0,0,0,0.08);
 }
 
 .skill-box{
-    margin-top:25px;
-    font-size:14px;
-    color:#aaa;
+    background:white;
+    padding:20px;
+    border-radius:16px;
+    box-shadow:0 4px 15px rgba(0,0,0,0.08);
+}
+
+.bar{
+    height:8px;
+    background:#e3e6f0;
+    border-radius:10px;
+    margin-top:10px;
+}
+
+.fill{
+    height:8px;
+    width:85%;
+    background:linear-gradient(90deg,#4a6fa5,#9b6bff);
+    border-radius:10px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<!-- HEADER -->
+<div class="header">
 
-<h1>MUHAMMAD KAKA RAMADHAN</h1>
-<p>Beranilah mengambil resiko, karena tak ada yang bisa menggantikan pengalaman.</p>
+<img src="PIC_KAKA.jpeg" class="photo">
 
-<a class="link" href="https://kakasite.github.io/MuhammadKakaRamadhan/">
-🌐 Website Portfolio
-</a>
+<div class="name">MUHAMMAD<br>KAKA RAMADHAN</div>
 
-<a class="link" href="https://instagram.com/kaa_kemren" target="_blank">
-📸 Instagram
-</a>
+<div class="sub">TKJ Student • Networking Enthusiast</div>
 
-<a class="link" href="https://youtube.com/@MUHAMMADKAKARAMADHAN" target="_blank">
-▶ YouTube
-</a>
-
-<div class="skill-box">
-<p><b>Skill:</b> Computer Networking Basic</p>
-<p><b>Focus Area:</b> Networking</p>
+<div>
+<span class="tag">Indonesia</span>
+<span class="tag">Networking</span>
 </div>
 
+</div>
+
+<!-- ABOUT -->
+<div class="section">
+<div class="title">About Me</div>
+
+<div class="card">
+Hello. I am <b>Muhammad Kaka Ramadhan</b>.  
+I study Computer Networking.  
+I love learning about networking, system support, and building simple websites.  
+My passion is understanding how technology connects people.
+</div>
+</div>
+
+<!-- SKILLS -->
+<div class="section">
+<div class="title">My Skills</div>
+
+<div class="skill-box">
+<b>Computer Networking Basics</b> <span style="float:right;">85%</span>
+
+<div class="bar">
+<div class="fill"></div>
+</div>
+
+</div>
 </div>
 
 </body>
