--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@ body{
     background:linear-gradient(90deg,#4a6fa5,#9b6bff);
     border-radius:10px;
 }
+
+/* tombol sosmed */
+.social{
+    margin-top:20px;
+    text-align:center;
+}
+
+.btn{
+    display:inline-block;
+    padding:12px 18px;
+    margin:8px;
+    border-radius:12px;
+    text-decoration:none;
+    font-weight:600;
+    color:white;
+}
+
+.ig{ background:#e1306c; }
+.yt{ background:#ff0000; }
+
+.btn:hover{
+    opacity:0.85;
+}
 </style>
 </head>
 
@@ -107,6 +130,12 @@ body{
 <div>
 <span class="tag">Indonesia</span>
 <span class="tag">Networking</span>
+</div>
+
+<!-- TOMBOL SOSMED -->
+<div class="social">
+<a class="btn ig" href="https://instagram.com/kaa_kemren" target="_blank">Instagram</a>
+<a class="btn yt" href="https://youtube.com/@MUHAMMADKAKARAMADHAN" target="_blank">YouTube</a>
 </div>
 
 </div>
