--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body{
 
 .fill{
     height:8px;
-    width:85%;
+    width:60%;
     background:linear-gradient(90deg,#4a6fa5,#9b6bff);
     border-radius:10px;
 }
@@ -121,11 +121,11 @@ body{
 <!-- HEADER -->
 <div class="header">
 
-<img src="PIC_KAKA.jpeg" class="photo">
+<img src="PICKAKA.jpeg" class="photo">
 
 <div class="name">MUHAMMAD<br>KAKA RAMADHAN</div>
 
-<div class="sub">TKJ Student • Networking Enthusiast</div>
+<div class="sub">TJKT 2 Student, SMK Negeri 1 Cirebon • Networking Enthusiast</div>
 
 <div>
 <span class="tag">Indonesia</span>
