--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@ to{width:85%}
 
 <div class="name">MUHAMMAD<br>KAKA RAMADHAN</div>
 
-<div class="sub">TJKT 2  Student, SMK Negeri 1 Cirebon 
- Networking Focus</div>
+<div class="sub">TJKT 2  Student, SMK Negeri 1 Cirebon </div>
+ 
+  <div>  Networking Focus</div>
 
 <div>
 <span class="tag">Indonesia</span>
