--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ to{width:85%}
 </div>
 
 <div class="social">
-<a class="btn ig" href="https://instagram.com/kaa_kemren" target="_blank">Instagram</a>
+<a class="btn ig" href="https://www.instagram.com/kaa_kemren?igsh=MXNvbXFicTQxcHZndw==" target="_blank">Instagram</a>
 <a class="btn yt" href="https://youtube.com/@MUHAMMADKAKARAMADHAN" target="_blank">YouTube</a>
 </div>
 
