--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><title>Muhammad Kaka Ramadhan | Networking Student</title>
+
+<meta name="description" content="Website resmi Muhammad Kaka Ramadhan. Student TJKT  2, SMK Negeri 1 CIREBON 
+fokus networking, IT support, dan web development.">
+
+<meta name="keywords" content="Muhammad Kaka Ramadhan, Kaka Ramadhan,  Networking Student TJKT 2, SMK Negeri 1 CIREBON 
+IT, Network Engineer">
+
+<meta name="author" content="Muhammad Kaka Ramadhan">
+
+<meta property="og:title" content="Muhammad Kaka Ramadhan">
+<meta property="og:description" content="Networking student from Indonesia">
+<meta property="og:image" content="PICKAKA.jpeg">
+<meta property="og:type" content="website">
+<meta name="description" content="Website Muhammad Kaka Ramadhan, student networking">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kaka Ramadhan</title>
+<title>Muhammad Kaka Ramadhan</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
