--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head><title>Muhammad Kaka Ramadhan | Networking Student</title>
+<head><title>Muhammad Kaka Ramadhan | Networking Student Indonesia</title>
+
+<meta name="description" content="Website resmi Muhammad Kaka Ramadhan. Student TJKT 2 SMK Negeri 1 Cirebon fokus Computer Networking, IT Support, dan Web Development dari Indonesia.">
+
+<meta name="keywords" content="Muhammad Kaka Ramadhan, Muhammad Kaka Ramadhan, Networking Student TJKT 2 SMK Negeri 1 Cirebon, IT Support, Network Engineer Indonesia">
+
+<meta name="author" content="Muhammad Kaka Ramadhan">
+<meta name="robots" content="index, follow">
+
+<!-- Google -->
+<meta name="google-site-verification" content="ISI_NANTI_DARI_GOOGLE">
+
+<!-- Open Graph -->
+<meta property="og:title" content="Muhammad Kaka Ramadhan">
+<meta property="og:description" content="Networking student from Indonesia">
+<meta property="og:image" content="PICKAKA.jpeg">
+<meta property="og:url" content="https://kakasite.github.io/MuhammadKakaRamadhan/">
+<meta property="og:type" content="website">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Muhammad Kaka Ramadhan">
+<meta name="twitter:description" content="Networking student from Indonesia">
+<meta name="twitter:image" content="PICKAKA.jpeg"><title>Muhammad Kaka Ramadhan | Networking Student</title>
 
 <meta name="description" content="Website resmi Muhammad Kaka Ramadhan. Student TJKT  2, SMK Negeri 1 CIREBON 
 fokus networking, IT support, dan web development.">
