--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><title>Muhammad Kaka Ramadhan | Networking Student Indonesia</title>
+<head><meta name="google-site-verification" content="kYx5oKPIjsfe8X99QDp
+    <title>Muhammad Kaka Ramadhan | Networking Student Indonesia</title>
 
 <meta name="description" content="Website resmi Muhammad Kaka Ramadhan. Student TJKT 2 SMK Negeri 1 Cirebon fokus Computer Networking, IT Support, dan Web Development dari Indonesia.">
 
