--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="index, follow">
 
 <!-- Google -->
-<meta name="google-site-verification" content="ISI_NANTI_DARI_GOOGLE">
+<meta name="google-site-verification" content="kYx5oKPIjsfe8X99QDp">
 
 <!-- Open Graph -->
 <meta property="og:title" content="Muhammad Kaka Ramadhan">
