--- a/index.html
+++ b/index.html
@@ -1,242 +1,178 @@
 <!DOCTYPE html>
-<html>
-<head><meta name="google-site-verification" content="kYx5oKPIjsfe8X99QDp
-    
-
-<meta name="description" content="Website resmi Muhammad Kaka Ramadhan. Student TJKT 2 SMK Negeri 1 Cirebon fokus Computer Networking, IT Support, dan Web Development dari Indonesia.">
-
-<meta name="keywords" content="Muhammad Kaka Ramadhan, Muhammad Kaka Ramadhan, Networking Student TJKT 2 SMK Negeri 1 Cirebon, IT Support, Network Engineer Indonesia">
-
-<meta name="author" content="Muhammad Kaka Ramadhan">
-<meta name="robots" content="index, follow">
-
-<!-- Google -->
-<meta name="google-site-verification" content="kYx5oKPIjsfe8X99QDp">
-    <title>Muhammad Kaka Ramadhan | Networking Student Indonesia</title>
-
-
-<!-- Open Graph -->
-<meta property="og:title" content="Muhammad Kaka Ramadhan">
-<meta property="og:description" content="Networking student from Indonesia">
-<meta property="og:image" content="PICKAKA.jpeg">
-<meta property="og:url" content="https://kakasite.github.io/MuhammadKakaRamadhan/">
-<meta property="og:type" content="website">
-
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Muhammad Kaka Ramadhan">
-<meta name="twitter:description" content="Networking student from Indonesia">
-<meta name="twitter:image" content="PICKAKA.jpeg"><title>Muhammad Kaka Ramadhan | Networking Student</title>
-
-<meta name="description" content="Website resmi Muhammad Kaka Ramadhan. Student TJKT  2, SMK Negeri 1 CIREBON 
-fokus networking, IT support, dan web development.">
-
-<meta name="keywords" content="Muhammad Kaka Ramadhan, Kaka Ramadhan,  Networking Student TJKT 2, SMK Negeri 1 CIREBON 
-IT, Network Engineer">
-
-<meta name="author" content="Muhammad Kaka Ramadhan">
-
-<meta property="og:title" content="Muhammad Kaka Ramadhan">
-<meta property="og:description" content="Networking student from Indonesia">
-<meta property="og:image" content="PICKAKA.jpeg">
-<meta property="og:type" content="website">
-<meta name="description" content="Website Muhammad Kaka Ramadhan, student networking">
+<html lang="id">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Muhammad Kaka Ramadhan</title>
+
+<title>Muhammad Kaka Ramadhan | Networking Student</title>
+
+<meta name="description" content="Website pribadi Muhammad Kaka Ramadhan. Student networking, computer networking basic, TJKT 2 SMK Negeri 1 Cirebon student Indonesia.">
+<meta name="keywords" content="Muhammad Kaka Ramadhan, TJKT 2 SMK Negeri 1 Cirebon, networking student, computer networking, GitHub portfolio">
+<meta name="author" content="Muhammad Kaka Ramadhan">
+
+<!-- GOOGLE VERIFICATION (isi nanti dari search console) -->
+<meta name="google-site-verification" content="PASTE_KODE_GOOGLE_DI_SINI"/>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
 body{
-    margin:0;
-    font-family:'Poppins',sans-serif;
-    background:#0f172a;
-    color:white;
+margin:0;
+font-family:'Poppins',sans-serif;
+background:#f3f4f8;
+color:#333;
 }
 
-/* HEADER */
 .header{
-    text-align:center;
-    padding:50px 20px;
-    background:linear-gradient(180deg,#020617,#0f172a);
+background:linear-gradient(180deg,#e9ecf5,#f3f4f8);
+text-align:center;
+padding:50px 20px;
 }
 
 .photo{
-    width:120px;
-    height:120px;
-    border-radius:50%;
-    border:4px solid #38bdf8;
-    box-shadow:0 0 25px #38bdf8;
+width:120px;
+height:120px;
+border-radius:50%;
+object-fit:cover;
+border:6px solid #d7dcef;
+box-shadow:0 10px 25px rgba(0,0,0,0.15);
 }
 
 .name{
-    font-size:30px;
-    font-weight:700;
-    margin-top:15px;
+font-size:30px;
+font-weight:700;
+margin-top:15px;
 }
 
 .sub{
-    color:#38bdf8;
-    margin-top:6px;
+color:#4a6fa5;
+margin-top:5px;
 }
 
 .tag{
-    background:#020617;
-    padding:8px 14px;
-    border-radius:20px;
-    display:inline-block;
-    margin:6px;
-    font-size:13px;
-    border:1px solid #38bdf8;
+background:#fff;
+padding:8px 16px;
+border-radius:20px;
+display:inline-block;
+margin:6px;
+font-size:14px;
+box-shadow:0 4px 10px rgba(0,0,0,0.08);
 }
 
-/* SECTION */
 .section{
-    padding:30px 20px;
-    max-width:500px;
-    margin:auto;
+padding:30px 20px;
+max-width:500px;
+margin:auto;
 }
 
 .title{
-    font-size:22px;
-    font-weight:700;
-    color:#38bdf8;
-    margin-bottom:15px;
+font-size:22px;
+font-weight:700;
+color:#4a6fa5;
+margin-bottom:15px;
 }
 
 .card{
-    background:#020617;
-    padding:20px;
-    border-radius:16px;
-    border:1px solid #1e293b;
+background:white;
+padding:20px;
+border-radius:16px;
+box-shadow:0 4px 15px rgba(0,0,0,0.08);
+line-height:1.7;
 }
 
-/* SKILL */
 .skill-box{
-    background:#020617;
-    padding:20px;
-    border-radius:16px;
-    border:1px solid #1e293b;
+background:white;
+padding:20px;
+border-radius:16px;
+box-shadow:0 4px 15px rgba(0,0,0,0.08);
 }
 
 .bar{
-    height:10px;
-    background:#1e293b;
-    border-radius:10px;
-    margin-top:10px;
+height:8px;
+background:#e3e6f0;
+border-radius:10px;
+margin-top:10px;
 }
 
 .fill{
-    height:10px;
-    width:85%;
-    background:linear-gradient(90deg,#38bdf8,#8b5cf6);
-    border-radius:10px;
-    animation:load 2s;
-}
-
-@keyframes load{
-from{width:0}
-to{width:85%}
-}
-
-/* BUTTON */
-.social{
-    margin-top:25px;
+height:8px;
+width:85%;
+background:linear-gradient(90deg,#4a6fa5,#9b6bff);
+border-radius:10px;
 }
 
 .btn{
-    display:block;
-    padding:14px;
-    margin:12px auto;
-    border-radius:14px;
-    width:220px;
-    text-decoration:none;
-    font-weight:600;
-    color:white;
-    transition:0.3s;
+display:inline-block;
+margin:8px;
+padding:10px 18px;
+border-radius:25px;
+text-decoration:none;
+font-size:14px;
+font-weight:500;
+color:white;
 }
 
-.ig{
-    background:linear-gradient(90deg,#ff4d8d,#ff7a00);
-}
-.yt{
-    background:#ff0000;
-}
+.ig{background:#e1306c;}
+.yt{background:#ff0000;}
 
-.btn:hover{
-    transform:scale(1.05);
-}
-
-/* FOOTER */
 .footer{
-    text-align:center;
-    padding:30px;
-    font-size:13px;
-    color:#64748b;
+text-align:center;
+padding:30px;
+color:#777;
+font-size:13px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- MUSIC -->
-<audio autoplay loop>
-<source src="https://files.catbox.moe/9q6n3y.mp3" type="audio/mp3">
-</audio>
-
-<!-- HEADER -->
 <div class="header">
 
-<img src="PICKAKA.jpeg" class="photo">
+<img src="PIC_KAKA.jpeg" class="photo">
 
 <div class="name">MUHAMMAD<br>KAKA RAMADHAN</div>
 
-<div class="sub">TJKT 2  Student, SMK Negeri 1 Cirebon </div>
- 
-  <div>  Networking Focus</div>
+<div class="sub">TJKT Student • Networking Enthusiast</div>
 
 <div>
 <span class="tag">Indonesia</span>
 <span class="tag">Networking</span>
-<span class="tag">Future Engineer</span>
+<span class="tag">Computer Networking</span>
 </div>
 
-<div class="social">
-<a class="btn ig" href="https://www.instagram.com/kaa_kemren?igsh=MXNvbXFicTQxcHZndw==" target="_blank">Instagram</a>
+<div style="margin-top:15px;">
+<a class="btn ig" href="https://instagram.com/kaa_kemren" target="_blank">Instagram</a>
 <a class="btn yt" href="https://youtube.com/@MUHAMMADKAKARAMADHAN" target="_blank">YouTube</a>
 </div>
 
 </div>
 
-<!-- ABOUT -->
 <div class="section">
 <div class="title">About Me</div>
 
 <div class="card">
-Hello, I am <b>Muhammad Kaka Ramadhan</b>.  
-I focus on <b>Computer Networking</b>.  
-I enjoy learning networking systems, troubleshooting, and building websites.  
-My goal is to become a professional network engineer.
+Hello. I am <b>Muhammad Kaka Ramadhan</b>.  
+I am a student focusing on <b>Computer Networking</b>.  
+I enjoy learning networking, system support, and building simple websites.  
+My goal is to become a professional in networking and IT infrastructure.
 </div>
 </div>
 
-<!-- SKILL -->
 <div class="section">
-<div class="title">My Skill</div>
+<div class="title">My Skills</div>
 
 <div class="skill-box">
-Computer Networking Basic 60%
+<b>Computer Networking Basics</b> 
+<span style="float:right;">85%</span>
 
 <div class="bar">
 <div class="fill"></div>
 </div>
-
 </div>
 </div>
 
 <div class="footer">
-© 2026 Kaka Ramadhan
+© 2026 Muhammad Kaka Ramadhan
 </div>
 
 </body>
