--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ font-size:13px;
 
 <div class="header">
 
-<img src="PIC_KAKA.jpeg" class="photo">
+<img src="PICKAKA.jpeg" class="photo">
 
 <div class="name">MUHAMMAD<br>KAKA RAMADHAN</div>
 
@@ -163,7 +163,7 @@ My goal is to become a professional in networking and IT infrastructure.
 
 <div class="skill-box">
 <b>Computer Networking Basics</b> 
-<span style="float:right;">85%</span>
+<span style="float:right;">60%</span>
 
 <div class="bar">
 <div class="fill"></div>
