--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ font-size:13px;
 
 <div class="name">MUHAMMAD<br>KAKA RAMADHAN</div>
 
-<div class="sub">TJKT Student • Networking Enthusiast</div>
+<div class="sub">TJKT 2 SMK Negeri 1 Cirebon Student • Networking Enthusiast</div>
 
 <div>
 <span class="tag">Indonesia</span>
