--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <meta name="author" content="Muhammad Kaka Ramadhan">
 
 <!-- GOOGLE VERIFICATION (isi nanti dari search console) -->
-<meta name="google-site-verification" content="kYx5oKPIjsfe8X99Q"/>
-
+<meta name="google-site-verification" content="kYx5oKPIjsfe8X99QDplCunAzTiJSgt4ty77aiV3KuU" />
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
