--- a/index.html
+++ b/index.html
@@ -1,177 +1,167 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Muhammad Kaka Ramadhan</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Segoe UI", sans-serif;
+        }
 
-<title>Muhammad Kaka Ramadhan | Networking Student</title>
+        body {
+            background: linear-gradient(180deg, #eef3ff, #ffffff);
+            display: flex;
+            justify-content: center;
+            padding: 30px 10px;
+        }
 
-<meta name="description" content="Website pribadi Muhammad Kaka Ramadhan. Student networking, computer networking basic, TJKT 2 SMK Negeri 1 Cirebon student Indonesia.">
-<meta name="keywords" content="Muhammad Kaka Ramadhan, TJKT 2 SMK Negeri 1 Cirebon, networking student, computer networking, GitHub portfolio">
-<meta name="author" content="Muhammad Kaka Ramadhan">
+        .container {
+            max-width: 400px;
+            width: 100%;
+            text-align: center;
+        }
 
-<!-- GOOGLE VERIFICATION (isi nanti dari search console) -->
-<meta name="google-site-verification" content="kYx5oKPIjsfe8X99QDplCunAzTiJSgt4ty77aiV3KuU" />
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+        /* PROFILE */
+        .profile img {
+            width: 110px;
+            height: 110px;
+            border-radius: 50%;
+            border: 4px solid #4a90e2;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
 
-<style>
-body{
-margin:0;
-font-family:'Poppins',sans-serif;
-background:#f3f4f8;
-color:#333;
-}
+        h1 {
+            font-size: 22px;
+            font-weight: 700;
+            line-height: 1.3;
+        }
 
-.header{
-background:linear-gradient(180deg,#e9ecf5,#f3f4f8);
-text-align:center;
-padding:50px 20px;
-}
+        .subtitle {
+            font-size: 14px;
+            color: #4a90e2;
+            margin-top: 8px;
+        }
 
-.photo{
-width:120px;
-height:120px;
-border-radius:50%;
-object-fit:cover;
-border:6px solid #d7dcef;
-box-shadow:0 10px 25px rgba(0,0,0,0.15);
-}
+        .badge-container {
+            margin: 15px 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 8px;
+        }
 
-.name{
-font-size:30px;
-font-weight:700;
-margin-top:15px;
-}
+        .badge {
+            background: #f1f4ff;
+            padding: 6px 12px;
+            border-radius: 20px;
+            font-size: 12px;
+            color: #333;
+        }
 
-.sub{
-color:#4a6fa5;
-margin-top:5px;
-}
+        /* SECTION */
+        .section-title {
+            margin: 25px 0 10px;
+            font-size: 20px;
+            font-weight: 700;
+            color: #4a90e2;
+        }
 
-.tag{
-background:#fff;
-padding:8px 16px;
-border-radius:20px;
-display:inline-block;
-margin:6px;
-font-size:14px;
-box-shadow:0 4px 10px rgba(0,0,0,0.08);
-}
+        .card {
+            background: #ffffff;
+            border-radius: 15px;
+            padding: 15px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+            margin-bottom: 15px;
+            text-align: left;
+        }
 
-.section{
-padding:30px 20px;
-max-width:500px;
-margin:auto;
-}
+        .card p {
+            font-size: 14px;
+            line-height: 1.6;
+            color: #333;
+        }
 
-.title{
-font-size:22px;
-font-weight:700;
-color:#4a6fa5;
-margin-bottom:15px;
-}
+        /* SKILLS */
+        .skill {
+            margin-bottom: 10px;
+        }
 
-.card{
-background:white;
-padding:20px;
-border-radius:16px;
-box-shadow:0 4px 15px rgba(0,0,0,0.08);
-line-height:1.7;
-}
+        .skill-title {
+            font-size: 14px;
+            margin-bottom: 5px;
+            font-weight: 600;
+        }
 
-.skill-box{
-background:white;
-padding:20px;
-border-radius:16px;
-box-shadow:0 4px 15px rgba(0,0,0,0.08);
-}
+        .progress {
+            width: 100%;
+            height: 8px;
+            background: #e0e6ff;
+            border-radius: 10px;
+            overflow: hidden;
+        }
 
-.bar{
-height:8px;
-background:#e3e6f0;
-border-radius:10px;
-margin-top:10px;
-}
+        .progress-bar {
+            height: 100%;
+            background: #4a90e2;
+            width: 85%;
+            border-radius: 10px;
+        }
 
-.fill{
-height:8px;
-width:85%;
-background:linear-gradient(90deg,#4a6fa5,#9b6bff);
-border-radius:10px;
-}
-
-.btn{
-display:inline-block;
-margin:8px;
-padding:10px 18px;
-border-radius:25px;
-text-decoration:none;
-font-size:14px;
-font-weight:500;
-color:white;
-}
-
-.ig{background:#e1306c;}
-.yt{background:#ff0000;}
-
-.footer{
-text-align:center;
-padding:30px;
-color:#777;
-font-size:13px;
-}
-</style>
+        .percentage {
+            font-size: 12px;
+            text-align: right;
+            margin-top: 3px;
+            color: #555;
+        }
+    </style>
 </head>
-
 <body>
 
-<div class="header">
+<div class="container">
 
-<img src="PICKAKA.jpeg" class="photo">
+    <!-- PROFILE -->
+    <div class="profile">
+        <img src="PICKAKA.jpg" alt="Profile Photo">
+        <h1>MUHAMMAD<br>KAKA<br>RAMADHAN</h1>
+        <p class="subtitle">TJKT 2 Student, SMK Negeri 1 Cirebon</p>
 
-<div class="name">MUHAMMAD<br>KAKA RAMADHAN</div>
+        <div class="badge-container">
+            <div class="badge">Aspiring IT & Networking Enthusiast</div>
+            <div class="badge">West Java, Indonesia</div>
+            <div class="badge">Class X TJKT 2</div>
+        </div>
+    </div>
 
-<div class="sub">TJKT 2 SMK Negeri 1 Cirebon Student • Networking Enthusiast</div>
+    <!-- ABOUT ME -->
+    <h2 class="section-title">About Me</h2>
+    <div class="card">
+        <p>
+            Hello, I am <strong>Joseph Salahudin Irawan</strong>. I study Teknik Jaringan
+            Komputer dan Telekomunikasi (TJKT) at SMK Negeri 1 Cirebon.
+            I am currently 15–16 years old. I love learning about networking,
+            system support, and building simple web projects.
+            My passion lies in understanding how technology connects people
+            and creates opportunities for innovation.
+        </p>
+    </div>
 
-<div>
-<span class="tag">Indonesia</span>
-<span class="tag">Networking</span>
-<span class="tag">Computer Networking</span>
-</div>
+    <!-- SKILLS -->
+    <h2 class="section-title">My Skills</h2>
+    <div class="card">
+        <div class="skill">
+            <div class="skill-title">Computer Networking Basics</div>
+            <div class="progress">
+                <div class="progress-bar"></div>
+            </div>
+            <div class="percentage">60%</div>
+        </div>
+    </div>
 
-<div style="margin-top:15px;">
-<a class="btn ig" href="https://instagram.com/kaa_kemren" target="_blank">Instagram</a>
-<a class="btn yt" href="https://youtube.com/@MUHAMMADKAKARAMADHAN" target="_blank">YouTube</a>
-</div>
-
-</div>
-
-<div class="section">
-<div class="title">About Me</div>
-
-<div class="card">
-Hello. I am <b>Muhammad Kaka Ramadhan</b>.  
-I am a student focusing on <b>Computer Networking</b>.  
-I enjoy learning networking, system support, and building simple websites.  
-My goal is to become a professional in networking and IT infrastructure.
-</div>
-</div>
-
-<div class="section">
-<div class="title">My Skills</div>
-
-<div class="skill-box">
-<b>Computer Networking Basics</b> 
-<span style="float:right;">60%</span>
-
-<div class="bar">
-<div class="fill"></div>
-</div>
-</div>
-</div>
-
-<div class="footer">
-© 2026 Muhammad Kaka Ramadhan
 </div>
 
 </body>
