--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
     <h2 class="section-title">About Me</h2>
     <div class="card">
         <p>
-            Hello, I am <strong>Joseph Salahudin Irawan</strong>. I study Teknik Jaringan
+            Hello, I am <strong>Muhammad Kaka Ramadhan</strong>. I study Teknik Jaringan
             Komputer dan Telekomunikasi (TJKT) at SMK Negeri 1 Cirebon.
-            I am currently 15–16 years old. I love learning about networking,
+            I am currently 15–16 years old. I love learning about networking, cyber security,
             system support, and building simple web projects.
             My passion lies in understanding how technology connects people
             and creates opportunities for innovation.
