--- a/index.html
+++ b/index.html
@@ -1,168 +1,358 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhammad Kaka Ramadhan</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Segoe UI", sans-serif;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Muhammad Kaka Ramadhan</title>
 
-        body {
-            background: linear-gradient(180deg, #eef3ff, #ffffff);
-            display: flex;
-            justify-content: center;
-            padding: 30px 10px;
-        }
+<!-- Google Icons -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        .container {
-            max-width: 400px;
-            width: 100%;
-            text-align: center;
-        }
+<!-- Font Awesome (Instagram, YouTube, Email Icon Asli) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-        /* PROFILE */
-        .profile img {
-            width: 110px;
-            height: 110px;
-            border-radius: 50%;
-            border: 4px solid #4a90e2;
-            object-fit: cover;
-            margin-bottom: 15px;
-        }
+<style>
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:"Segoe UI",sans-serif;
+}
 
-        h1 {
-            font-size: 22px;
-            font-weight: 700;
-            line-height: 1.3;
-        }
+body{
+    background:linear-gradient(180deg,#eef3ff,#ffffff);
+    display:flex;
+    justify-content:center;
+    padding:30px 12px;
+}
 
-        .subtitle {
-            font-size: 14px;
-            color: #4a90e2;
-            margin-top: 8px;
-        }
+.container{
+    max-width:420px;
+    width:100%;
+    text-align:center;
+}
 
-        .badge-container {
-            margin: 15px 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 8px;
-        }
+/* ===== PROFILE HEADER ===== */
+.profile-header{
+    background:linear-gradient(135deg,#4a90e2,#7b61ff);
+    padding:40px 20px;
+    border-radius:22px;
+    color:white;
+    margin-bottom:30px;
+    box-shadow:0 10px 25px rgba(0,0,0,0.15);
+}
 
-        .badge {
-            background: #f1f4ff;
-            padding: 6px 12px;
-            border-radius: 20px;
-            font-size: 12px;
-            color: #333;
-        }
+.profile-img{
+    width:120px;
+    height:120px;
+    margin:auto;
+    border-radius:50%;
+    padding:4px;
+    background:white;
+}
 
-        /* SECTION */
-        .section-title {
-            margin: 25px 0 10px;
-            font-size: 20px;
-            font-weight: 700;
-            color: #4a90e2;
-        }
+.profile-img img{
+    width:100%;
+    height:100%;
+    border-radius:50%;
+    object-fit:cover;
+}
 
-        .card {
-            background: #ffffff;
-            border-radius: 15px;
-            padding: 15px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-            margin-bottom: 15px;
-            text-align: left;
-        }
+.profile-header h1{
+    margin-top:15px;
+    font-size:22px;
+    font-weight:700;
+    line-height:1.3;
+}
 
-        .card p {
-            font-size: 14px;
-            line-height: 1.6;
-            color: #333;
-        }
+.subtitle{
+    font-size:14px;
+    margin-top:8px;
+    opacity:0.9;
+}
 
-        /* SKILLS */
-        .skill {
-            margin-bottom: 10px;
-        }
+.tagline{
+    font-size:13px;
+    margin-top:6px;
+    opacity:0.85;
+}
 
-        .skill-title {
-            font-size: 14px;
-            margin-bottom: 5px;
-            font-weight: 600;
-        }
+.badge-container{
+    margin-top:15px;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    gap:8px;
+}
 
-        .progress {
-            width: 100%;
-            height: 8px;
-            background: #e0e6ff;
-            border-radius: 10px;
-            overflow: hidden;
-        }
+.badge{
+    background:rgba(255,255,255,0.2);
+    color:white;
+    padding:6px 12px;
+    border-radius:20px;
+    font-size:12px;
+    backdrop-filter:blur(5px);
+}
 
-        .progress-bar {
-            height: 100%;
-            background: #4a90e2;
-            width: 85%;
-            border-radius: 10px;
-        }
+/* ===== SECTION ===== */
+.section-title{
+    margin:35px 0 15px;
+    font-size:20px;
+    font-weight:700;
+    color:#4a90e2;
+}
 
-        .percentage {
-            font-size: 12px;
-            text-align: right;
-            margin-top: 3px;
-            color: #555;
-        }
-    </style>
+/* ===== CARD ===== */
+.card{
+    background:#fff;
+    border-radius:16px;
+    padding:18px;
+    box-shadow:0 8px 20px rgba(0,0,0,0.08);
+    margin-bottom:18px;
+    text-align:left;
+    border:1px solid #dbe4ff;
+}
+
+/* ===== ABOUT TEXT ===== */
+.card p{
+    font-size:14px;
+    line-height:1.6;
+    color:#333;
+}
+
+/* ===== SKILLS ===== */
+.skill-title{
+    font-size:14px;
+    margin-bottom:6px;
+    font-weight:600;
+}
+
+.progress{
+    width:100%;
+    height:8px;
+    background:#e0e6ff;
+    border-radius:10px;
+    overflow:hidden;
+}
+
+.progress-bar{
+    height:100%;
+    background:#4a90e2;
+    width:85%;
+    border-radius:10px;
+}
+
+.percentage{
+    font-size:12px;
+    text-align:right;
+    margin-top:3px;
+    color:#555;
+}
+
+/* ===== FOCUS AREA ===== */
+.focus-card{
+    display:flex;
+    gap:15px;
+    align-items:flex-start;
+}
+
+.icon-box{
+    width:50px;
+    height:50px;
+    border-radius:12px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    font-size:26px;
+    flex-shrink:0;
+}
+
+.blue{background:#4a90e2;}
+.purple{background:#7b61ff;}
+.red{background:#ff5e6c;}
+
+.focus-content h3{
+    font-size:16px;
+    margin-bottom:5px;
+}
+
+.focus-content p{
+    font-size:13px;
+    color:#555;
+}
+
+/* ===== CONNECT SECTION ===== */
+a{
+    text-decoration:none;
+    color:inherit;
+}
+
+.connect-card{
+    text-align:center;
+    padding:22px;
+    transition:0.3s;
+}
+
+.connect-card:hover{
+    transform: translateY(-6px) scale(1.02);
+    box-shadow: 0 15px 30px rgba(0,0,0,0.15);
+}
+
+.connect-card:active{
+    transform: scale(0.97);
+}
+
+.connect-icon{
+    width:55px;
+    height:55px;
+    margin:auto;
+    border-radius:14px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    font-size:28px;
+    margin-bottom:12px;
+    animation: pulseGlow 2.4s infinite;
+}
+
+/* ===== PULSE GLOW ANIMATION ===== */
+@keyframes pulseGlow {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(255,255,255,0.4);
+    }
+    60% {
+        transform: scale(1.1);
+        box-shadow: 0 0 18px 8px rgba(255,255,255,0);
+    }
+    100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(255,255,255,0);
+    }
+}
+
+/* ===== BRAND COLORS + GLOW ===== */
+.instagram{
+    background:linear-gradient(45deg,#f58529,#dd2a7b,#8134af,#515bd4);
+    box-shadow:0 0 15px rgba(221,42,123,0.7);
+}
+
+.email{
+    background:#7b61ff;
+    box-shadow:0 0 15px rgba(123,97,255,0.7);
+}
+
+.youtube{
+    background:#ff0000;
+    box-shadow:0 0 15px rgba(255,0,0,0.7);
+}
+
+/* ===== DELAY TIAP ICON ===== */
+.connect-card:nth-of-type(1) .connect-icon{
+    animation-delay:0s;
+}
+.connect-card:nth-of-type(2) .connect-icon{
+    animation-delay:0.8s;
+}
+.connect-card:nth-of-type(3) .connect-icon{
+    animation-delay:1.6s;
+}
+</style>
 </head>
 <body>
 
 <div class="container">
 
-    <!-- PROFILE -->
-    <div class="profile">
-        <img src="PICKAKA.jpg" alt="Profile Photo">
-        <h1>MUHAMMAD<br>KAKA<br>RAMADHAN</h1>
-        <p class="subtitle">TJKT 2 Student, SMK Negeri 1 Cirebon</p>
-
-        <div class="badge-container">
-            <div class="badge">Aspiring IT & Networking Enthusiast</div>
-            <div class="badge">West Java, Indonesia</div>
-            <div class="badge">Class X TJKT 2</div>
-        </div>
+<!-- PROFILE -->
+<div class="profile-header">
+    <div class="profile-img">
+        <img src="PICKAKA.jpg" alt="Profile">
     </div>
+    <h1>MUHAMMAD<br>KAKA<br>RAMADHAN</h1>
+    <p class="subtitle">TJKT 2 Student, SMK Negeri 1 Cirebon</p>
+    <p class="tagline">Aspiring IT & Networking Enthusiast</p>
 
-    <!-- ABOUT ME -->
-    <h2 class="section-title">About Me</h2>
-    <div class="card">
-        <p>
-            Hello, I am <strong>Muhammad Kaka Ramadhan</strong>. I study Teknik Jaringan
-            Komputer dan Telekomunikasi (TJKT) at SMK Negeri 1 Cirebon.
-            I am currently 15–16 years old. I love learning about networking, cyber security,
-            system support, and building simple web projects.
-            My passion lies in understanding how technology connects people
-            and creates opportunities for innovation.
-        </p>
+    <div class="badge-container">
+        <div class="badge">📍 West Java, Indonesia</div>
+        <div class="badge">🎓 Class X TJKT 2</div>
+        <div class="badge">💻 Networking Student</div>
     </div>
-
-    <!-- SKILLS -->
-    <h2 class="section-title">My Skills</h2>
-    <div class="card">
-        <div class="skill">
-            <div class="skill-title">Computer Networking Basics</div>
-            <div class="progress">
-                <div class="progress-bar"></div>
-            </div>
-            <div class="percentage">60%</div>
-        </div>
-    </div>
-
 </div>
 
+<!-- ABOUT -->
+<h2 class="section-title">About Me</h2>
+<div class="card">
+<p>
+Hello, I am <strong>Muhammad Kaka Ramadhan</strong>. I enjoy learning networking,cyber security,
+IT support, and building responsive websites.
+</p>
+</div>
+
+<!-- SKILLS -->
+<h2 class="section-title">My Skills</h2>
+<div class="card">
+<div class="skill-title">Computer Networking Basics</div>
+<div class="progress">
+<div class="progress-bar"></div>
+</div>
+<div class="percentage">65%</div>
+</div>
+
+<!-- FOCUS -->
+<h2 class="section-title">Focus Area</h2>
+
+<div class="card focus-card">
+<div class="icon-box blue"><span class="material-icons">router</span></div>
+<div class="focus-content">
+<h3>Networking</h3>
+<p>Understanding devices & infrastructure.</p>
+</div>
+</div>
+
+<div class="card focus-card">
+<div class="icon-box purple"><span class="material-icons">computer</span></div>
+<div class="focus-content">
+<h3>IT Support</h3>
+</div>
+</div>
+
+<div class="card focus-card">
+<div class="icon-box red"><span class="material-icons">code</span></div>
+<div class="focus-content">
+<h3>Web Basics</h3>
+<p>Building responsive websites.</p>
+</div>
+</div>
+
+<!-- CONNECT -->
+<h2 class="section-title">Connect With Me</h2>
+
+<a href="https://www.instagram.com/kaa_kemren?igsh=MXNvbXFicTQxcHZndw==" target="_blank" class="card connect-card">
+<div class="connect-icon instagram">
+<i class="fa-brands fa-instagram"></i>
+</div>
+<h4>Instagram</h4>
+<p>@kaa_kemren</p>
+</a>
+
+<a href="mailto:mkakaramadhan08@gmail.com" class="card connect-card">
+<div class="connect-icon email">
+<i class="fa-solid fa-envelope"></i>
+</div>
+<h4>Email</h4>
+<p>mkakaramadhan08@gmail.com</p>
+</a>
+
+<a href="https://www.youtube.com/@MUHAMMADKAKARAMADHAN-08" target="_blank" class="card connect-card">
+<div class="connect-icon youtube">
+<i class="fa-brands fa-youtube"></i>
+</div>
+<h4>YouTube</h4>
+<p>@MUHAMMADKAKARAMADHAN-08</p>
+</a>
+
+</div>
 </body>
 </html>
