--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ a{
 <!-- PROFILE -->
 <div class="profile-header">
     <div class="profile-img">
-        <img src="PICKAKA.jpg" alt="Profile">
+        <img src="PICKAKA.jpeg" alt="Profile">
     </div>
     <h1>MUHAMMAD<br>KAKA<br>RAMADHAN</h1>
     <p class="subtitle">TJKT 2 Student, SMK Negeri 1 Cirebon</p>
