--- a/index.html
+++ b/index.html
@@ -319,24 +319,35 @@ a{
 <!-- CONNECT -->
 <h2 class="section-title">Connect With Me</h2>
 
-<a href="https://www.instagram.com/kaa_kemren?igsh=MXNvbXFicTQxcHZndw==" target="_blank" class="card connect-card">
-<div class="connect-icon instagram"><i class="fa-brands fa-instagram"></i></div>
-<h4>Instagram</h4>
-<p>@kaa_kemren</p>
-</a>
+<div class="card">
+        <div class="social-icons">
 
-<a href="mailto:mkakaramadhan08@gmail.com" class="card connect-card">
-<div class="connect-icon email"><i class="fa-solid fa-envelope"></i></div>
-<h4>Email</h4>
-<p>mkakaramadhan08@gmail.com</p>
-</a>
+            <!-- Instagram -->
+            <a class="instagram"
+               href="https://www.instagram.com/kaa_kemren/"
+               target="_blank"
+               rel="noopener">
+                <i class="fab fa-instagram"></i>
+            </a>
 
-<a href="https://www.youtube.com/@MUHAMMADKAKARAMADHAN-08" target="_blank" class="card connect-card">
-<div class="connect-icon youtube"><i class="fa-brands fa-youtube"></i></div>
-<h4>YouTube</h4>
-<p>@MUHAMMADKAKARAMADHAN-08</p>
-</a>
+            <!-- Email -->
+            <a class="email"
+               href="mailto:mkakaramadhan08@gmail.com">
+                <i class="fas fa-envelope"></i>
+            </a>
+
+            <!-- YouTube -->
+            <a class="youtube"
+               href="https://www.youtube.com/@MUHAMMADKAKARAMADHAN-08"
+               target="_blank"
+               rel="noopener">
+                <i class="fab fa-youtube"></i>
+            </a>
+
+        </div>
+    </div>
 
 </div>
+
 </body>
 </html>
