--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
 
 /* ===== BACKGROUND FOTO ===== */
 body{
-    background:
-        linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-        url("background.jpg") no-repeat center center fixed;
-    background-size:cover;
+    background: linear-gradient(
+        135deg,
+        #eef2ff,
+        #e0e7ff,
+        #f8fafc
+    );
     display:flex;
     justify-content:center;
     padding:30px 12px;
     min-height:100vh;
+}
+
 }
 
 .container{
@@ -109,13 +113,13 @@ body{
 
 /* ===== CARD ===== */
 .card{
-    background:rgba(255,255,255,0.95);
-    backdrop-filter:blur(6px);
+    background:#ffffff;
     border-radius:16px;
     padding:18px;
-    box-shadow:0 10px 25px rgba(0,0,0,0.25);
-    margin-bottom:18px;
-    text-align:left;
+    box-shadow:0 10px 25px rgba(0,0,0,0.08);
+    border:1px solid rgba(0,0,0,0.05);
+    margin-bottom:20px;
+
 }
 
 .card p{
